--- a/.github/workflows/actions_test.yml
+++ b/.github/workflows/actions_test.yml
@@ -1,6 +1,15 @@
-steps:
-- uses: actions/checkout@v3
-- uses: actions/setup-python@v4
-  with:
-    python-version: '3.10' 
-- run: python my_script.py
+name: Python Workflow
+
+on: [push, pull_request]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.10' 
+    - run: python my_script.py
