--- a/.github/workflows/actions_test.yml
+++ b/.github/workflows/actions_test.yml
@@ -12,4 +12,10 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.10' 
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    
     - run: python my_script.py
