--- a/.github/workflows/actions_test.yml
+++ b/.github/workflows/actions_test.yml
@@ -18,4 +18,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
+    - name: Generate UML
+      run: |
+        sudo apt install graphviz
+        
+
+
     - run: python my_script.py
