--- a/.github/workflows/actions_test.yml
+++ b/.github/workflows/actions_test.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Generate UML
       run: |
         sudo apt install graphviz
-        
 
 
-    - run: python my_script.py
+
+    #- run: python my_script.py
